2009-07-14  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Fix setting of category ?C.

2009-07-12  Guanpeng Xu  <herberteuler@hotmail.com>

	* pcomplete.el (pcomplete-comint-setup): Check for
	shell-dynamic-complete-filename too.

2009-07-11  Kenichi Handa  <handa@m17n.org>

	* international/mule-diag.el (describe-character-set): Don't show
	width.

2009-07-10  Eli Zaretskii  <eliz@gnu.org>

	* cus-edit.el (customize-changed-options-previous-release): Bump
	value to 22.1.  (Bug#3804)

2009-07-08  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-set-file-uid-gid): Handle the case the
	remote user is root, on the local host.
	(tramp-local-host-p): Either the local user or the remote user
	must be root.  (Bug#3771)

2009-07-08  E. Jay Berkenbilt  <ejb@ql.org>  (tiny change)

	* mail/unrmail.el (unrmail): Make sure the message ends with two
	newlines (Bug#3769).

2009-07-08  Kenichi Handa  <handa@m17n.org>

	* international/fontset.el (setup-default-fontset): For each
	script, append (not set) font-specs.

	* language/japanese.el (japanese-shift-jis-2004): Fix typo in the
	docstring.

2009-07-07  Kenichi Handa  <handa@m17n.org>

	* international/mule-cmds.el (reset-language-environment): Put
	the highset priority to the charset iso-8859-1.

2009-07-06  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-write-region): Flush file properties
	in case of short track.

2009-07-06  Glenn Morris  <rgm@gnu.org>

	* subr.el (eval-after-load): Doc fix.

2009-07-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (find-alternate-file-other-window, find-alternate-file):
	Obey confirm-nonexistent-file-or-buffer.

2009-07-03  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc-math.el (math-use-emacs-fn): Make sure that the number is
	formatted correctly.

2009-07-02  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (def-gdb-auto-update-handler)
	(gdb-data-list-register-values-handler)